--- a/src/contact.html
+++ b/src/contact.html
@@ -21,17 +21,17 @@ title: Contact
   <form class="max-w-lg">
     <div class="mb-3">
       <label for="input-email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email:</label>
-      <input type="email" id="input-email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required />
+      <input type="email" id="input-email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required />
     </div>
     
     <div class="mb-3">
       <label for="input-name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name:</label>
-      <input type="email" id="input-name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required />
+      <input type="text" id="input-name" name="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required />
     </div>
 
     <div class="mb-3">
       <label for="input-message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Message:</label>
-      <textarea id="input-message" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required rows="4"></textarea>
+      <textarea id="input-message" name="message" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required rows="4"></textarea>
     </div>
 
     <div class="cf-turnstile" data-sitekey="1x00000000000000000000AA"></div>
@@ -39,5 +39,19 @@ title: Contact
     <button type="submit" class="text-white bg-primary-500 hover:bg-primary-600 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Submit</button>
   </form>
 
-  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js"></script>
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" defer></script>
+
+  <script>
+    const form = document.querySelector("form");
+    form.addEventListener("submit", async e => {
+      e.preventDefault();
+
+      const data = new FormData(form);
+      const response = await fetch("/api/contact", {
+        method: "POST",
+        body: data
+      });
+      console.log(await response.json());
+    });
+  </script>
 </section>
