SEO, robots.txt, sitemap

--- a/src/contact.html
+++ b/src/contact.html
@@ -3,6 +3,7 @@ layout: base.liquid
 tags: navbar
 order: 3
 title: Contact
+description: "Contact me"
 ---
 
 <section class="max-w-screen-md mx-auto">
